--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -39,7 +39,7 @@
 
 body {
   width: 100%;
-  max-height: 100vh;
+ height: 100vh;
   background-color: #ffffff;
   font-family: "EuclidSquare", "Inter", sans-serif;
   /* border: 1px solid blue; */
@@ -47,13 +47,12 @@ body {
 
 #root {
   width: 100%;
-  max-height: 100vh;
   display: flex;
 }
 
 .app {
   width: 100%;
-  max-height: 100vh;
+  height: 100vh;
   display: flex;
 }
 
@@ -62,7 +61,7 @@ body {
   flex-direction: column;
   max-height: 100vh;
   overflow-y: auto; /* Enable scrolling for the main content */
-  height: 100%; /* Optional: to ensure it fills the viewport vertically */
+  /* height: 100%;  */
   width: 100%;
   background-color: #f9fafb;
 }
