--- a/Client/src/components/GenericFactoryForm/GenericDepartmentForm.css
+++ b/Client/src/components/GenericFactoryForm/GenericDepartmentForm.css
@@ -1,70 +1,1 @@
-
-/* GenericDepartmentForm.css */
-
-.generic-department-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 20px;
-    width: 500px;
-  }
-  .add-department {
-    width: 100%;
-  }
-
-
-
-  .department-warp{
-  
-    margin: 20px auto;
-    padding: 20px;
-    background: #FFFF;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  }
-  .department-btn, .generic-department-form button {
-    padding: 5px 10px;
-    margin: 5px;
-    background-color: #f0f0f0;
-    border: 1px solid #dcdcdc;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .department-btn.selected {
-    background-color: #d1e7dd; /* Light green for selected */
-  }
-  
-  .selected-departments .selected-department {
-    display: inline-block;
-    background-color: #b8daff; /* Light blue for custom added */
-    padding: 5px;
-    margin: 5px;
-    border-radius: 4px;
-  }
-  
-  .remove-btn {
-    margin-left: 10px;
-    color: #dc3545; /* Red for remove button */
-    cursor: pointer;
-    background: none;
-    border: none;
-  }
-  
-  .generic-department-form button:disabled {
-    background-color: #cccccc;
-    cursor: not-allowed;
-  }
-  
-  .formButton button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-  }
+c
