--- a/Client/src/components/modals/setupModal.css
+++ b/Client/src/components/modals/setupModal.css
@@ -1,19 +1,47 @@
 .modal-backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.modal-navigate-btn,
+.modal-close-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+  margin: 10px;
+  transition: all 0.3s ease;
+}
+
+.modal-navigate-btsn {
+  background-color: #4caf50; /* Green */
+  color: white;
+}
+
+.modal-close-btn {
+  background-color: #f44336; /* Red */
+  color: white;
+}
+
+.modal-navigate-btn:hover {
+  background-color: #45a049;
+}
+
+.modal-close-btn:hover {
+  background-color: #d32f2f;
+}
