--- a/Client/src/components/Nav/NavUser.css
+++ b/Client/src/components/Nav/NavUser.css
@@ -9,7 +9,9 @@
     align-items: center;
     width: 100%;
     height: 50px;
+    gap: 5px;
     font-family: "Euclid Square", sans-serif; /* Ensure you load Euclid Square font */
+    /* border: 1px solid black; */
   }
   
   .avatar {
@@ -26,6 +28,7 @@
   }
   .username {
     display: flex;
+    /* border: 1px solid black; */
     justify-content: center;
     align-items: center;
     font-weight: 600;
@@ -51,4 +54,23 @@
   }
   
   /* Add more styles as needed */
+  @media (max-width: 950px) {
+
+    .Navuser{
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+    .user-profile {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      width: 100%;
+      height: 50px;
+      gap: 5px;
+      font-family: "Euclid Square", sans-serif; /* Ensure you load Euclid Square font */
+    }
+
+
+  } 
   
