--- a/Client/src/components/Nav/MobileNavBar.css
+++ b/Client/src/components/Nav/MobileNavBar.css
@@ -14,6 +14,6 @@
   flex-shrink: 0; /* Prevent the button from shrinking */
 }
 
-.nav-user-container {
-  flex-grow: 1; /* Allow <NavUser/> to take up remaining space */
-}
+/* .nav-user-container { */
+  /* flex-grow: 1; */
+/* } */
