--- a/Client/src/components/UserManu/UserMenu.css
+++ b/Client/src/components/UserManu/UserMenu.css
@@ -14,7 +14,7 @@
   justify-content: space-around;
   align-items: center;
   padding: 4px;
-  border: 1px solid rgb(0, 86, 179);
+  /* border: 1px solid rgb(0, 86, 179); */
 }
 
 .user-button:hover {
