--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -48,20 +48,20 @@ body {
 #root {
   width: 100%;
   display: flex;
+  height: 100%;
 }
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
 }
 
 .page {
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
-  overflow-y: auto; /* Enable scrolling for the main content */
-  /* height: 100%;  */
+  overflow-y: auto; 
   width: 100%;
-  background-color: #f9fafb;
+    height: 100%;
+  background-color: white;
 }
