--- a/Client/src/components/UserManu/UserMenu.css
+++ b/Client/src/components/UserManu/UserMenu.css
@@ -75,7 +75,7 @@
  */
 @media (max-width: 950px) {
   .user-button {
-    background-color: #333;
+    /* background-color: #333; */
     border-radius: 20px;
     cursor: pointer;
     width: 50px;
