--- a/Client/src/components/FactorySetup/SetupFactory.css
+++ b/Client/src/components/FactorySetup/SetupFactory.css
@@ -3,7 +3,7 @@
 .department-cards-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 /* Full viewport height for setup-factory */
