--- a/Client/src/Pages/Factory/FactoryDa.css
+++ b/Client/src/Pages/Factory/FactoryDa.css
@@ -7,7 +7,7 @@
   background-color: #f0f2f5;
 }
 
-.department-card {
+.department-cards {
   background-color: #ffffff;
   border-radius: 12px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
