--- a/Client/src/components/Nav/MobileNavBar.css
+++ b/Client/src/components/Nav/MobileNavBar.css
@@ -10,10 +10,17 @@
   border: 1px solid rgb(215, 211, 211);
 }
 
-.mobile-nav-bar button {
-  flex-shrink: 0; /* Prevent the button from shrinking */
+.hamburger-btn {
+  background-color: #444;
+  border: none;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
 }
 
-/* .nav-user-container { */
-  /* flex-grow: 1; */
-/* } */
+.hamburger-btn:hover {
+  background-color: #555;
+}
