--- a/Client/src/components/UserManu/UserMenu.css
+++ b/Client/src/components/UserManu/UserMenu.css
@@ -22,9 +22,9 @@
 }
 
 .menu-dropdown {
-  position: absolute;
-  top: 50px;
-  left: 0;
+  position: relative;
+  top: 150px;
+  left: 100;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 8px;
